--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.35.0
-tensorflow==2.12.0
-spacy==3.7.2
-pandas==2.2.2
-altair==5.3.0
-numpy==1.23.5
-scikit-learn==1.3.2
+streamlit
+tensorflow>=2.11.0
+spacy
+pandas
+altair
+scikit-learn
+joblib
