--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit
+tensorflow==2.12.0
 spacy
-tensorflow
-numpy
+joblib
 pandas
-scikit-learn
+numpy
+altair
 matplotlib
 seaborn
-altair
+scikit-learn
